force-app/main/default/objects/PMP_Feature__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <label>Estimated Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>