force-app/main/default/objects/PMP_Feature__c/fields/Open_to_Build__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Build__c</fullName>
    <label>Open to Build?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>