force-app/main/default/objects/PMP_Feature__c/fields/PMP__c.field-meta.xml
<CustomField>
    <fullName>PMP__c</fullName>
    <label>PMP</label>
    <referenceTo>Product_Migration_Placeholder__c</referenceTo>
    <relationshipLabel>PMP Features</relationshipLabel>
    <relationshipName>PMP_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>