force-app/main/default/objects/PMP_Feature__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(PMP__r.Product__c)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>